# duckdb-demo

./: .gitignore  README.md  pyproject.toml
dbt/: README.md  demo.duckdb
dbt/duckdbdemo/: dbt_project.yml
dbt/duckdbdemo/models/example/: model2.sql
exporter/: README.md  export_snowflake.py
streamlit/: dash-dqtools.py
